[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyauthtools"
version = "0.2.0"
authors = [
  { name="lidaning", email="453882101@qq.com" }
]
description = "Some auth tools using in python flask."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/relidaning/pyauthtools"
"Bug Tracker" = "https://github.com/relidaning/pyauthtools/issues"